<resources>
    <string name="app_name">Tonight\'s\nmovie</string>
    <string name="accroche">what should I watch ?</string>
    <string name="action_settings">Settings</string>
    <string name="unknown">unknown</string>
    <string name="power_by">Tonigh\'s movie\nprovided by Thnkly Studio</string>
    <string name="dbmovie">We are using themoviedb.org</string>
    <string name="relevant_details">Get relevant details\non movies</string>
    <string name="designed_for_you">Suggestions designed\nfor you</string>
    <string name="legal_links">Legal purchase and\nstream links</string>
    <string name="choose_favorite">Search your favorite movie!</string>
    <string name="validate">Take me to my suggestions</string>
    <string name="query_hint">V for Vendetta</string>
    <string name="select_movie_first">First you need to select a favorite movie.</string>
    <string name="understood">I get it</string>
    <string name="notification_title">Psssst!</string>
    <string name="notification_message">Wondering which movie you gonna watch tonight this evening?</string>
    <string name="update_title">Update available</string>
    <string name="update_message">Looks like you\'re using an old version of Tonight\'s movie, please update it in order to get new features :)</string>
    <string name="update_positive">Update now</string>
    <string name="search_on">Watch on</string>
    <string name="next">Next</string>
    <string name="contact">Contact us</string>
    <string name="contact_summary">Give us your feedback</string>
    <string name="changes_next_time">Changes will be effective on next startup</string>
    <string name="about">About</string>
    <string name="ok">cool!</string>
    <string name="preferences">Preferences</string>
    <string name="thank">Thank you for checking!</string>
    <string name="version_summary">made with ❤ for you by www.tonightsmovie.com</string>
    <string name="general">General</string>
    <string name="movie_preference">Reset preferences</string>
    <string name="reset_movie_preference">reset all movie preferences</string>
    <string name="rate">Rate us</string>
    <string name="term_of_service_title">Terms of service</string>
    <string name="term_of_service_summary">visit webpage</string>
    <string name="term_of_service_url">http://tonightsmovie.com/tos</string>
    <string name="crafted_app_time_and_weekday_period">We crafted this app version with love on a %1$s %2$s.</string>
    <string name="crafted_app_precise_time_and_dom_month_hour_minute_city">More precisely, it was the %1$s of %2$s at exactly %3$s:%4$s in %5$s.</string>
    <string name="night">night</string>
    <string name="morning">morning</string>
    <string name="afternoon">afternoon</string>
    <string name="evening">evening</string>
    <string name="minute_date_format">mm a</string>
    <string name="dom_th_and_dom">%sth</string>
    <string name="dom_st_and_dom">%sst</string>
    <string name="dom_nd_and_dom">%snd</string>
    <string name="dom_rd_and_dom">%srd</string>
    <string name="branch_link">https://bnc.lt/get-tonights-movie-app</string>
    <string name="version">version 1.0.0.alpha.INT</string>
    <string name="made_in_france">made with ❤ for you in France.</string>
    <string name="no_internet">No internet connection.</string>
    <string name="retry">Retry</string>
    <string name="share">Share</string>
    <string name="share_title">Recommand this app!</string>
    <string name="share_message">Hey! I just discover %1$s movie via Tonight\'s movie app. \n\nFind a movie to watch tonight : https://bnc.lt/get-tonights-movie-app</string>
    <string name="image_saved">Image has been saved successfully.</string>
    <string name="as">as</string>
    <string name="director">Directed by %1$s</string>
    <string name="overview">Overview</string>
    <string name="cast">Casting</string>
    <string name="production_companie">Production companies</string>
    <string name="released">Released on</string>
    <string name="homepage">Visit movie homepage</string>
    <string name="producted_by">Producted by </string>
    <string name="en_images">In pictures</string>
    <string name="en_chiffre">In figures</string>
    <string name="en_video">In videos</string>
</resources>