<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/flat_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/choose_favorite"
                android:textColor="@android:color/white"
                android:textSize="25dp"/>

            <SearchView
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:iconifiedByDefault="false"
                android:queryHint="@string/query_hint"
                android:theme="@style/AppTheme.Widget"></SearchView>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingTop="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/movie_thumbnail"
                android:layout_width="170dp"
                android:layout_height="220dp"
                android:layout_centerInParent="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_above="@+id/validate"
                android:background="@drawable/elevation_shadow"/>

            <Button
                android:id="@+id/validate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="0dp"
                android:background="@drawable/selector_rect_progress"
                android:enabled="false"
                android:padding="10dp"
                android:text="@string/validate"
                android:textColor="@android:color/white"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>