<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/posters" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.8"
        android:background="@color/colorPrimaryDarkAlpha" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <genyus.com.whichmovie.view.foreground.ForegroundRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            custom:foreground="@drawable/ripple_background">

            <ImageView
                android:id="@+id/relevant_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:src="@drawable/relevant" />

            <TextView
                android:id="@+id/relevant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_toRightOf="@+id/relevant_icon"
                android:fontFamily="sans-serif-light"
                android:text="@string/relevant_details"
                android:textColor="@android:color/white"
                android:textSize="30dp" />

        </genyus.com.whichmovie.view.foreground.ForegroundRelativeLayout>

        <View
            android:layout_width="50dp"
            android:layout_height="1dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/progress" />

        <genyus.com.whichmovie.view.foreground.ForegroundRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            custom:foreground="@drawable/ripple_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/designed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:fontFamily="sans-serif-light"
                    android:gravity="right"
                    android:text="@string/designed_for_you"
                    android:textColor="@android:color/white"
                    android:textSize="30dp" />

                <ImageView
                    android:id="@+id/designed_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:src="@drawable/target" />

            </LinearLayout>

        </genyus.com.whichmovie.view.foreground.ForegroundRelativeLayout>

        <View
            android:layout_width="50dp"
            android:layout_height="1dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/progress" />

        <genyus.com.whichmovie.view.foreground.ForegroundRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            custom:foreground="@drawable/ripple_background">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/next">

                <TextView
                    android:id="@+id/legal_links"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_toRightOf="@+id/legal_icon"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/legal_links"
                    android:textColor="@android:color/white"
                    android:textSize="30dp" />

                <ImageView
                    android:id="@+id/legal_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:src="@drawable/stream" />

            </RelativeLayout>

            <Button
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@drawable/selector_rect_progress"
                android:padding="10dp"
                android:text="@string/next"
                android:textColor="@android:color/white" />

        </genyus.com.whichmovie.view.foreground.ForegroundRelativeLayout>

    </LinearLayout>

</RelativeLayout>